<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/hintColorLight"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/colorPrimaryLight"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/MidView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_keyboard_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyboard" />

            <Button
                android:id="@+id/button_voice_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speech" />

            <Button
                android:id="@+id/button_image_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/history" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>