<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/hintColorLight"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/button_usage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usage"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@id/toolbar_about"
        android:textSize="25sp"
        android:paddingStart="30sp"
        android:layout_marginTop="26dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/button_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@id/button_usage"
        android:textSize="25sp"
        android:paddingStart="30sp"
        android:layout_marginTop="30dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/text_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>