<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/hintColorLight"
        android:theme="?attr/actionBarTheme"
        app:title="设置"
        app:navigationIcon="@drawable/abc_ic_ab_back_material"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/server"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_settings">

        <TextView
            android:id="@+id/textView"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:text="@string/server"
            android:gravity="center_vertical"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/editTextServer"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:ems="10"
            android:background="@drawable/edit_text_color"
            android:inputType="textUri"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/server" />

    <TextView
        android:id="@+id/textViewTranslation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/translationOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTranslation">

        <LinearLayout
            android:id="@+id/autoSaveTranslation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textViewAutoSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/autoSave"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxAutoSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="0dp"
                android:checked="false"
                android:scaleX="1.5"
                android:scaleY="1.5" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewClearHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cleanHistory"
            android:textSize="20sp"
            android:padding="20dp"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/translationOptions" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/langSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/languageTextView">

        <!-- rest of your layout -->

        <LinearLayout
            android:id="@+id/sourceLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/sourceLangId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="源语言："
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sourceLangText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/gray"
                android:text="自动检测"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/targetLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/targetLangId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="目标语言："
                android:textSize="20sp" />

            <TextView
                android:id="@+id/targetLangText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/gray"
                android:text="Chinese"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <!-- rest of your layout -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>